--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -5,7 +5,8 @@ $(function(){
 	var header = $('.header'),
 		masthead = $('.masthead'),
 		scrollNotice = $('.scroll-notice'),
-		body = $('body');
+		body = $('body'),
+		scrollDist = $(window).scrollTop();
 		
 		
 	function centerMasthead(){
@@ -22,7 +23,6 @@ $(function(){
 	});
 
 	$(window).scroll(function(){
-		var scrollDist = $(window).scrollTop();
 		scrollNotice.css({
 			"opacity" : 1 - (scrollDist / 600)
 		});
