--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -35,8 +35,7 @@ $(function(){
 	});
 	
 	body.on('keydown', function(e){
-		var scrollDist = $(window).scrollTop();
-		if(1 - (scrollDist / 600) != 100){
+		if(scrollNotice.opacity != 100){
 			if(e.keyCode === 13 ){
 				scrollNotice.trigger('click');
 				e.stopPropagation();
