--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,13 @@
 <footer class="footer-wrap" role="complementary">
 	<p class="footer">
-	   Cedced19 - <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>
+	   Cedced19 - <a href="http://cedced19.github.io/license/">MIT</a>
             {% if page.title != site.title %}
             	{% if page.title != 'Blog'%}
-            		<br>
-            		<br>
-	                <a href="http://twitter.com/share?text=&ldquo;{{ page.title }}&rdquo; by @cedced19 :">Partager sur Twitter</a><br>
+            		{% if page.title != 'License'%}
+	            		<br>
+	            		<br>
+		                <a href="http://twitter.com/share?text=&ldquo;{{ page.title }}&rdquo; by @cedced19 :">Partager sur Twitter</a><br>
+	        	{% endif %}
 	        {% endif %}
             {% endif %}
         </p>
