--- a/_includes/head-post.html
+++ b/_includes/head-post.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{% if page.title != 'Blog'%} | Blog{% endif %}</title>
+        <title>{{ page.title }}{% if page.title != 'Blog'%} | Blog{% endif %}</title>
         <meta name="viewport" content="width=device-width">
         <!--[if lt IE 9]>
             <script type="text/javascript" src="/scripts/ie.js"></script>
