--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,10 @@
         {% include head.html %}
     </head>
     <body{% if page.class %} class="{{ page.class }}"{% endif %}>
-
+    
+        {% if page.class != 'post' %}
             {% include header.html %}
+        {% endif %}
 
         {% if page.class != 'fourOhfour' %}
             {% if page.class != 'soon' %}
