--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,6 +34,9 @@
         -->
         <style>
         {% include style.css %}
+        {% if page.class == "post" %}
+                {% include navblog.css %}
+        {% endif %}
         </style>
         
         <meta name="author" content="Cedced19">
