--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,20 @@
         {% include head.html %}
     </head>
     <body{% if page.class %} class="{{ page.class }}"{% endif %}>
+        
+        {% if page.class == "post" %}
+        <nav>
+                <ul class="menu">
+                    <li class="menu"><a href="//cedced19.github.io" class="menu">Acceuil</a></li>
+                    <li class="menu {% if page.title == "Blog" %}active{% endif %}"><a href="//cedced19.github.io/blog/" class="menu">Blog</a></li>
+                    {% if page.title != "Blog" %}<li class="menu active"><a href="#" class="menu">{{ page.title }}</a></li>{% endif %}
+                </ul>
+        </nav>
+        {% endif %}
     
+        {% if page.class != "post" %}
         {% include header.html %}
+        {% endif %}
 
         {% if page.class != 'fourOhfour' %}
             {% if page.class != 'soon' %}
