--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,11 @@
     <body{% if page.class %} class="{{ page.class }}"{% endif %}>
         
         {% if page.class == "post" %}
-        <nav>
-            <a href="//cedced19.github.io/blog"><< Blog</a>
-        </nav>
+            {% if page.title != "Blog" %}
+            <nav>
+                <a class="nav" href="//cedced19.github.io/blog"><< Blog</a>
+            </nav>
+            
         {% endif %}
     
         {% if page.class != "post" %}
