--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}{% if page.class == 'fourOhfour' %} | {{ site.title }} {% endif %}{% if page.class == 'home' %}{% if page.title != site.title %} | {{ site.title }}{% endif %}{% endif %}{% if page.class == 'post' %}{% if page.title != 'Blog'%} | Blog{% endif %}{% endif %}</title>
+        <title>{{ page.title }}{% if page.class != 'post' %} | {{ site.title }} {% endif %}{% if page.class == 'post' %}| Blog{% endif %}</title>
         <meta name="viewport" content="width=device-width">
         <!--[if lt IE 9]>
             <script type="text/javascript" src="/scripts/ie.js"></script>
@@ -14,9 +14,9 @@
         <style>
         {% include style.css %}
         </style>
-        
+
         <meta name="author" content="Cedced19">
-        
+
         <meta name="twitter:cars" content="summary">
         <meta name="twitter:title" content="{{ page.title }}">
         <meta name="twitter:image" content="http://cedced19.github.io/profile.png">
@@ -30,7 +30,7 @@
         <meta property="og:url" content="{{ site.url }}">
 
         <link href="//plus.google.com/104855167193751168501/" rel="publisher">
-        
+
 
         <meta name="msvalidate.01" content="7AA9997055DFFA5FA75B150DB285F647">
         <meta name="google-site-verification" content="daG8-WfmzTnxEOZ0gvyKhFVPyqGcp_MuANWkyM8THK8">
