--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,9 @@
 	<p class="footer">
 	   Cedced19 - <a href="http://cedced19.github.io/license/">MIT</a>
             	{% if page.class == 'post' %}
-		        <div class="social"><a href="http://twitter.com/share?text=&ldquo;{{ page.title }}&rdquo; by @cedced19 :">Partager sur Twitter</a></div>
-	        {% endif %}
+                        {% if page.title != 'Blog' %}
+                            <a href="http://twitter.com/share?text=&ldquo;{{ page.title }}&rdquo; by @cedced19 :" class="social">Partager sur Twitter</a></div>
+        	             {% endif %}
+                     {% endif %}
         </p>
 </footer>
