--- a/_includes/headerpost.html
+++ b/_includes/headerpost.html
@@ -3,5 +3,8 @@
                 <h1>{{ site.title }}</h1>
                 <br>
                 <h2>{{ page.title }}</h2>
+                 {% if page.title != 'Blog' %}
+                 <p class="post-time"><time datetime="{{ page.date }}">{{ page.date | date: "%B %d, %Y" }}</time></p>
+                 {% endif %}
             </div>
 </header>
